@@ -323,9 +323,6 @@ Volunteers for these and other projects are welcome!
     menu that I discovered this, as the tear-off help window and the
     short cuts box are clearly related.'
 
-314*David Karr <dkarr@nmo.gtegsc.com> suggests a JDB `Open Class'
-    dialog that actually lists class names, not just files.
-
 316 Bill Bumgarner <bbum@codefab.com> suggests Objective-C
     improvements for use with Foundation from Apple:
 
